Second page commit

--- a/index.html
+++ b/index.html
@@ -282,19 +282,14 @@
         }
 
         // make our labels unselectable
-        $.fn.extend({ 
-          disableSelection: function() { 
-            this.each(function() { 
-              if (typeof this.onselectstart != 'undefined') {
-                this.onselectstart = function() { return false; };
-              } else if (typeof this.style.MozUserSelect != 'undefined') {
-                this.style.MozUserSelect = 'none';
-              } else {
-                this.onmousedown = function() { return false; };
-              }
-            }); 
-          } 
-        });
+        (function($){
+            $.fn.disableSelection = function() {
+                return this
+                         .attr('unselectable', 'on')
+                         .css('user-select', 'none')
+                         .on('selectstart', false);
+            };
+        })(jQuery);
 
         $(document).ready(function() {
           $('body').disableSelection();
