--- a/index.html
+++ b/index.html
@@ -291,8 +291,28 @@
             };
         })(jQuery);
 
+        (function($) {
+          var count = 0;
+          $.fn.nodoubletapzoom = function() {
+              $(this).bind('touchstart', function preventZoom(e){
+                  var t2 = e.timeStamp;
+                  var t1 = $(this).data('lastTouch') || t2;
+                  var dt = t2 - t1;
+                  var fingers = e.originalEvent.touches.length;
+                  $(this).data('lastTouch', t2);
+                  if (!dt || dt > 500 || fingers > 1){
+                      return; // not double-tap
+                  }
+                  e.preventDefault(); // double tap - prevent the zoom
+                  // also synthesize click events we just swallowed up
+                  $(e.target).trigger('click');
+              });
+          };
+        })(jQuery);
+
         $(document).ready(function() {
           $('body').disableSelection();
+          $("body").nodoubletapzoom();
         });
       </script>
     </body> 
