--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
                   if (!dt || dt > 500 || fingers > 1){
                       return; // not double-tap
                   }
+                  $("#score").text("TAP!");
                   e.preventDefault(); // double tap - prevent the zoom
                   // also synthesize click events we just swallowed up
                   $(e.target).trigger('tap');
