--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
       #ground { width: 100%; height: 110px; position: absolute; bottom: 0; left: 0; background-color: "black"; 
                 background-image: url("ground.png"); background-position: bottom; background-repeat: repeat-x; }
       #credits { position: absolute; right: 10px; bottom: 10px; color: #010101;}
+      *::selection 
+      {
+          background-color:transparent;
+      } 
+      *::-moz-selection
+      {
+          background-color:transparent;
+      }
+      *
+      {        
+          -webkit-user-select: none;
+          -moz-user-select: -moz-none;
+          /*IE10*/
+          -ms-user-select: none;
+          user-select: none;
+
+          /*You just need this if you are only concerned with android and not desktop browsers.*/
+          -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      }    
       }
     </style> 
     <meta charset="UTF-8">
@@ -46,7 +65,7 @@
         var JUMP_ACCELERATION = 400;  // How fast are we after a jump?
         var COLUMN_GEN_SPEED  = 2;    // How quickly are columns generated (in seconds)?
         var COLUMN_MOVE_SPEED = 300;  // How fast do columns move?
-        var ARTHUR_WIDTH      = 100;
+        var ARTHUR_WIDTH      = 300;
         var ARTHUR_HEIGHT     = 0;
         var COLUMN_WIDTH      = 100;
 
