--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
         var JUMP_ACCELERATION = 400;  // How fast are we after a jump?
         var COLUMN_GEN_SPEED  = 2;    // How quickly are columns generated (in seconds)?
         var COLUMN_MOVE_SPEED = 300;  // How fast do columns move?
-        var ARTHUR_WIDTH      = 300;
-        var ARTHUR_HEIGHT     = 0;
         var COLUMN_WIDTH      = 100;
 
         var COL_GEN_SPEED_UP  = 0.1; // Each second, increase the GEN_SPEED by this amount
@@ -101,6 +99,10 @@
         var scene  = new THREE.Scene();
         var camera = new THREE.OrthographicCamera(window_width / - 2, window_width / 2, window_height / 2, window_height / - 2, 0, 10);
         scene.add(camera);
+
+
+        var ARTHUR_WIDTH      = (window_width / 8);
+        var ARTHUR_HEIGHT     = 0;
 
         // setup renderer + add to DIV
         var renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
@@ -322,7 +324,7 @@
                   if (!dt || dt > 500 || fingers > 1){
                       return; // not double-tap
                   }
-                  $("#score").text("TAP!");
+                  // $("#score").text("TAP!");
                   e.preventDefault(); // double tap - prevent the zoom
                   // also synthesize click events we just swallowed up
                   $(e.target).trigger('tap');
