Second page commit

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         // phone resolution
         // (h x w)
         // 790 x 480
-        var phone_height = 790;
+        var phone_height = 800;
         var phone_width  = 480;
         var phone_ratio  = phone_width / phone_height;
 
@@ -68,9 +68,9 @@
         {
           pref_distance = 110;
         }
-        if (pref_distance < 50)
+        if (pref_distance < 60)
         {
-          pref_distance = 50;
+          pref_distance = 60;
         }
 
         var window_height = window.innerHeight - pref_distance;
@@ -104,25 +104,25 @@
         var ARTHUR_STARTING_X = 0;    // Where on the screen horizontal does Arthur start?
         var ARTHUR_STARTING_Y = 0;    // Same, but height (0 = middle)
         var FPS_CAP           = 60; 
-        var CONSTANT_DRAG     = 60;   // How fast do we accelerate down per second?
-        var TERMINAL_VELOCITY = -600; // At what point do we stop falling faster?
-        var JUMP_ACCELERATION = 650;  // How fast are we after a jump?
-        var COLUMN_GEN_SPEED  = 1.5;  // How quickly are columns generated (in seconds)?
-        var COLUMN_MOVE_SPEED = 200;  // How fast do columns move?
-        var COLUMN_HEIGHT     = phone_height - 100;
+        var CONSTANT_DRAG     = 20;   // How fast do we accelerate down per second?
+        var TERMINAL_VELOCITY = -400; // At what point do we stop falling faster?
+        var JUMP_ACCELERATION = 300;  // How fast are we after a jump?
+        var COLUMN_GEN_SPEED  = 2;  // How quickly are columns generated (in seconds)?
+        var COLUMN_MOVE_SPEED = 240;  // How fast do columns move?
+        var COLUMN_HEIGHT     = phone_height - 200;
         var COLUMN_WIDTH      = (COLUMN_HEIGHT * column_ratio);
 
-        var COL_GEN_SPEED_UP  = 0.1;  // Each second, increase the GEN_SPEED by this amount
-        var COL_MOVE_SPEED_UP = 30;   // How much do we increase column speed per second?
-        var COLUMN_GAP_CLOSE  = 30;   // How much do we close the column gaps per second?
-        var GAP_P_INCREASE    = 0.01; // How much we increase the gap percentage per second?
+        var COL_GEN_SPEED_UP  = 1 / 120;  // Each second, increase the GEN_SPEED by this amount
+        var COL_MOVE_SPEED_UP = 240 / 120;   // How much do we increase column speed per second?
+        var COLUMN_GAP_CLOSE  = 100 / 120;   // How much do we close the column gaps per second?
+        var GAP_P_INCREASE    = 30 / 120; // How much we increase the gap percentage per second?
 
         var ABSOLUTE_GEN_SPEED = 0.5; // What is the minimum time between columns?
 
         var MAX_GAP           = 300;  // Starting MAX SIZE for column gaps
-        var MIN_GAP           = 200;  // Starting MIN SIZE for column gaps
-        var ABSOLUTE_MIN_GAP  = 100;  // Absolute MIN SIZE for column gaps
-        var GAP_PERCENTAGE    = 0;   // Max: 50, Min: 0
+        var MIN_GAP           = 300;  // Starting MIN SIZE for column gaps
+        var ABSOLUTE_MIN_GAP  = 200;  // Absolute MIN SIZE for column gaps
+        var GAP_PERCENTAGE    = 30;   // Max: 50, Min: 0
 
         var WON_SCORE         = 100;   // At what score do we win?
 
@@ -130,7 +130,7 @@
         var WON_MESSAGE       = "WHAT? HOLY SH*T! GOOD JOB!";
         var LOST_MESSAGE      = "AWWW ARTHUR'S DEAD";
 
-        var ARTHUR_HEIGHT     = 80;
+        var ARTHUR_HEIGHT     = 60;
         var ARTHUR_WIDTH      = ARTHUR_HEIGHT * arthur_ratio;
 
         var EARS_HEIGHT       = ARTHUR_HEIGHT; 
