--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@
                   var dt = t2 - t1;
                   var fingers = e.originalEvent.touches.length;
                   $(this).data('lastTouch', t2);
-                  if (!dt || dt > 500 || fingers > 1){
-                      return; // not double-tap
-                  }
+                  // if (!dt || dt > 500 || fingers > 1){
+                  //     return; // not double-tap
+                  // }
                   // $("#score").text("TAP!");
                   e.preventDefault(); // double tap - prevent the zoom
                   // also synthesize click events we just swallowed up
